# minecraft-audio-viz

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.simulator  INSTALLATION.md  Makefile  README.md  SECURITY.md  deploy.sh  docker-compose.demo.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  GPG-PUBLIC-KEY.asc  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml  social-preview.html
admin_panel/: index.html
audio_processor/: __init__.py  app_capture.py  asio_capture.py  auth.py  beat_predictor.py  capture_agent.py  cli.py  config.py  dj_relay.py  fft_analyzer.py  patterns.py  processor.py  requirements.txt  ringbuffer.py  spectrograph.py  vj_server.py  wasapi_loopback.py
community_bot/: __init__.py  __main__.py  bot.py  config.py  coordinator_client.py  pyproject.toml  views.py  webhook_server.py
community_bot/tests/: test_coordinator_client.py
configs/: dj_auth.example.json  dj_auth.json
coordinator/: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  Procfile  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
coordinator/alembic/: env.py
coordinator/alembic/versions/: 001_initial_schema.py  002_users_orgs_tenants.py  003_onboarding.py  004_vj_servers_key_prefix.py  005_add_shows_status_index.py  006_dj_profile_enhancements.py  007_dj_profile_social_links.py  008_add_admin_flag.py  009_dj_profile_block_palette.py  010_google_oauth.py  011_password_reset_tokens.py  012_auth_hardening.py  013_desktop_exchange_codes.py  014_add_user_id_to_dj_sessions.py  015_add_nonce_to_desktop_exchange_codes.py  016_add_show_count_constraints.py  017_add_user_roles_table.py  018_migrate_user_type_to_roles.py
coordinator/app/: __init__.py  config.py  database.py  logging_config.py  main.py
coordinator/app/dependencies/: auth.py  tenant.py
coordinator/app/middleware/: rate_limit.py  request_context.py  security.py
coordinator/app/models/: db.py  schemas.py
coordinator/app/routers/: admin.py  auth.py  connect.py  dashboard.py  discord_webhooks.py  dj_profiles.py  health.py  internal.py  metrics.py  onboarding.py  orgs.py  roles.py  servers.py  shows.py  tenants.py  uploads.py
coordinator/app/services/: audit.py  auth_service.py  code_generator.py  content_filter.py  discord_bot_notifier.py  discord_oauth.py  email.py  google_oauth.py  jwt_service.py  metrics.py  org_service.py  password.py  r2_storage.py  rate_limiter.py  server_service.py  user_jwt.py
coordinator/docs/: API.md
coordinator/tests/: __init__.py  conftest.py  test_admin_api.py  test_api.py  test_auth_api.py  test_auth_errors.py  test_code_generator.py  test_connect_capacity.py  test_connect_edge_cases.py  test_content_filter.py  test_dashboard_api.py  test_desktop_poll.py  test_disconnect.py  test_discord_webhooks.py  test_dj_profiles_api.py  test_internal_api.py  test_jwt_service.py  test_onboarding_api.py  test_orgs_api.py  test_password.py  test_role_sync_integration.py  test_roles_api.py  test_shows_api.py  test_tenants_api.py  test_uploads_api.py  test_user_jwt.py  test_user_roles.py
demo/: README.md  audio_simulator.py  nginx-preview.conf
discord_bot/: __init__.py  __main__.py  audio_analyzer.py  audio_sink.py  bot.py  requirements.txt
dj_client/: README.md  index.html  package-lock.json  package.json
dj_client/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
dj_client/src-tauri/capabilities/: default.json
dj_client/src-tauri/icons/: create_ico.ps1  create_icon.ps1  icon.icns
dj_client/src-tauri/installer/: LICENSE.txt  generate-branding.ps1
dj_client/src-tauri/src/: content_filter.rs  lib.rs  main.rs  patterns.rs  state.rs  voice.rs
dj_client/src-tauri/src/audio/: capture.rs  fft.rs  mod.rs  sources.rs
dj_client/src-tauri/src/audio/platform/: linux.rs  macos.rs  mod.rs  windows.rs
dj_client/src-tauri/src/protocol/: client.rs  messages.rs  mod.rs
docs/: AUDIO_PROCESSING.md  CONNECTIVITY.md  COORDINATOR_ARCHITECTURE.md  CREATIVE_VISION.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_STRATEGY.md  GTM_STRATEGY.md  LAUNCH_BRAINSTORM.md  MINECRAFT_SERVER_RUNBOOK.md  PATTERN_GUIDE.md  REFACTORING_PLANS.md  REPO_ROADMAP.md  branch-protection.md
docs-site/: Dockerfile  build.sh  mkdocs.yml
minecraft_mod/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
minecraft_plugin/: build.bat  dependency-reduced-pom.xml  pom.xml  spotbugs-exclude.xml
patterns/: aurora.lua  bars.lua  blackhole.lua  bpm_pulse.lua  bpm_strobe.lua  circle.lua  columns.lua  crown.lua  crystal.lua  dragon.lua  dropsequence.lua  explode.lua  fireflies.lua  fist.lua  galaxy.lua  heartbeat.lua  laser.lua  laserfan.lua  ledwall.lua  lib.lua  mandala.lua  matrix.lua  movingheads.lua  mushroom.lua  nebula.lua  ocean.lua  orbit.lua  phoenix.lua  pyramid.lua  pyro.lua  ring.lua  sacred.lua  shockwave.lua  skull.lua  spectrum.lua  strobe.lua  sword.lua  tesseract.lua  tubes.lua  vortex.lua  (+2 more)
protocol/: README.md
python_client/: __init__.py  audio_sync_test.py  audio_test.py  demo.py  requirements.txt  viz_client.py
scripts/: deploy-paper.sh  install.ps1  (+17 more)
vj_server/: METRICS.md  __init__.py  auth.py  beat_predictor.py  bitmap_client.py  bitmap_effects.py  cli.py  config.py  content_filter.py  coordinator_client.py  dj_manager.py  metrics.py  midi_config.py  midi_input.py  models.py  patterns.py  pyproject.toml  relay.py  stage_manager.py  test_metrics.py  track_metadata.py  viz_client.py  vj_server.py
vj_server/tests/: conftest.py  test_audio_pipeline.py  test_auth.py  test_beat_predictor.py  test_bitmap_effects.py  test_config.py  test_content_filter.py  test_dj_manager.py  test_metrics.py  test_models.py  test_patterns.py  test_reconnect_stage_rehydrate.py  test_stage_manager.py  test_viz_client_bitmap.py  test_vj_server_helpers.py
vj_server/track_sources/: base.py  file_watcher.py  osc_source.py
(+677 files in other folders)
