[project]
name = "mcav-community-bot"
version = "0.1.0"
description = "MCAV Discord community bot — role management and server setup"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcav-community-bot = "community_bot.__main__:main_sync"

[tool.ruff]
target-version = "py312"
line-length = 99
