[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcav-vj-server"
version = "1.0.0"
description = "MCAV VJ Server - Multi-DJ visualization server for Minecraft"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "lupa>=1.14",
    "better-profanity>=0.7.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
link = ["aalink>=0.1"]
full = ["aalink>=0.1"]

[project.scripts]
audioviz-vj = "vj_server.cli:vj_server"

[tool.hatch.build.targets.wheel]
packages = ["vj_server"]
