[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mcav-vj-server"
version = "1.0.0"
description = "MCAV VJ Server - Multi-DJ visualization server for Minecraft"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "lupa>=1.14",
    "better-profanity>=0.7.0",
    "bcrypt>=4.0.0",
    "msgspec>=0.18.0",
]

[project.optional-dependencies]
fast = ["uvloop>=0.19.0; sys_platform != 'win32'"]
link = ["aalink>=0.1"]
full = ["aalink>=0.1", "uvloop>=0.19.0; sys_platform != 'win32'"]

[project.scripts]
audioviz-vj = "vj_server.cli:vj_server"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=vj_server --cov-report=term-missing"

[tool.coverage.run]
source = ["vj_server"]
omit = ["vj_server/tests/*", "vj_server/test_*"]

[tool.coverage.report]
show_missing = true
fail_under = 15
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["vj_server*"]
