[package]
name = "dj-client"
version = "1.0.0"
description = "MCAV DJ Client - Connect to VJ servers and stream audio visualizations"
authors = ["MCAV Team"]
edition = "2021"
license = "MIT"

[lib]
name = "dj_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
rustfft = "6"
cpal = "0.15"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
rand = "0.8"
parking_lot = "0.12"

# Windows-specific dependencies for WASAPI per-app audio capture
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Variant",
] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# screencapturekit-rs = "0.2"  # For future macOS per-app capture

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# libpulse-binding = "2"  # For future Linux per-app capture

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
